fix: ajustando-botoes-da-pagina-de-manutencao

--- a/src/app/works/checklists-page/checklists-page.component.html
+++ b/src/app/works/checklists-page/checklists-page.component.html
@@ -1,5 +1,5 @@
 <div class="checklists-page-container">
-  <h2>Checklists para Obra ID:</h2>
+  <h2>Checklists</h2>
 
   <div class="checklist-options">
     <button (click)="toggleChecklist('inicio')" class="btn-checklist" [class.active]="showInicioObraChecklist">Checklist de Início de Obra</button>
