--- a/src/app/works/manutencoes/manutencao-list/manutencao-list.component.scss
+++ b/src/app/works/manutencoes/manutencao-list/manutencao-list.component.scss
@@ -316,3 +316,8 @@ h3 {
 .close-button:hover {
   color: #e53935; /* Construtiva Red */
 }
+
+.success-snackbar {
+  background-color: #4CAF50 !important; /* Green background */
+  color: #fff !important; /* White text */
+}
