--- a/src/app/works/documentos/documento-list/documento-list.component.scss
+++ b/src/app/works/documentos/documento-list/documento-list.component.scss
@@ -456,6 +456,11 @@ h3 {
   background-color: #333; /* Darker black on hover */
 }
 
+.success-snackbar {
+  background-color: #4CAF50 !important; /* Green background */
+  color: #fff !important; /* White text */
+}
+
 .btn-delete-document {
   background-color: #ef4444; /* Red for delete */
 
